<resources>
    <string name="app_name">Game</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="savefile">/data/user/0/com.example.game/files/users.csv</string>
    <string name="back">back</string>
    <string name="player_2_0">player_2_0</string>
    <string name="rock_paper_scissors">Rock paper scissors</string>
    <string name="change_language">change language</string>
    <string name="game">Game</string>
    <string name="settings">Settings</string>
    <string name="tictactoe">Tic Tac Toe</string>
</resources>
